--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
   implementation "io.vertx:vertx-web:$vertxVersion"
   implementation "io.vertx:vertx-web-api-contract:$vertxVersion"
   implementation "io.vertx:vertx-jdbc-client:$vertxVersion"
+  implementation "io.vertx:vertx-mysql-postgresql-client:$vertxVersion"
   implementation "org.postgresql:postgresql:42.2.5"
   implementation "com.github.vlachenal:sql-request-builder:0.9"
   implementation "org.apache.logging.log4j:log4j-slf4j-impl:2.11.1"     
